[package]
name = "dh_graphic_programming_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = "0.27.0"
glium = "*"
glfw = "0.23.0"
image = "0.19.0"

# matrix algebra library
glm = "*"


[build-dependencies]
gl_generator = "0.14.0"

